--- a/index.html
+++ b/index.html
@@ -1,20 +1,69 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Mi Página Profesional</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Javier Badillo San Juan</title>
   <style>
-    body { font-family: sans-serif; max-width: 800px; margin: auto; padding: 20px; }
-    h1 { color: #333; }
-    img { max-width: 100%; height: auto; }
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+      color: #333;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 40px 20px;
+    }
+    header {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+    h1 {
+      font-size: 2.5em;
+      margin: 0;
+    }
+    h2 {
+      font-size: 1.5em;
+      margin: 10px 0;
+      color: #555;
+    }
+    section {
+      max-width: 700px;
+      text-align: center;
+      line-height: 1.6;
+      font-size: 1.1em;
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    }
+    a {
+      color: #0072b1;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    footer {
+      margin-top: 40px;
+      font-size: 0.9em;
+      color: #888;
+    }
   </style>
 </head>
 <body>
-  <h1>Hola, soy [Tu Nombre]</h1>
-  <p>Soy [profesión o actividad]. Aquí comparto algunos trabajos, ideas y proyectos.</p>
-  <img src="mi-foto.jpg" alt="Mi foto">
-  <h2>Últimas publicaciones</h2>
-  <p>Post 1: resumen de algo que hiciste...</p>
-  <p>Post 2: otro contenido profesional...</p>
+  <header>
+    <h1>Javier Badillo San Juan</h1>
+    <h2>Ingeniero Civil Mecánico</h2>
+  </header>
+
+  <section>
+    <p><a href="https://www.linkedin.com/in/javierbadillosanjuan/" target="_blank">Ver perfil de LinkedIn</a></p>
+  </section>
+
+  <footer>
+    Chile · Sitio en construcción
+  </footer>
 </body>
 </html>
