--- a/index.html
+++ b/index.html
@@ -57,7 +57,13 @@
     <h1>Javier Badillo San Juan</h1>
     <h2>Ingeniero Civil Mecánico</h2>
   </header>
-
+  <section>
+    <p>
+  ¡Hola! En este blog muestro información relativa a mi experiencia profesional, proyectos en los que he trabajado 
+    e información interesante digna de compartir. Por el momento este sitio se encuentra en construcción, pero pronto 
+    estará operativo. Por mientras, te dejo el el link de mi página de LinkedIn.
+    </p>
+  <section/>
   <section>
     <p><a href="https://www.linkedin.com/in/javierbadillosanjuan/" target="_blank">Ver perfil de LinkedIn</a></p>
   </section>
