Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <p>
       ¡Hola! En este blog muestro información relativa a mi experiencia profesional, proyectos en los que he trabajado 
       e información interesante digna de compartir. Por el momento este sitio se encuentra en construcción, pero pronto 
-      estará operativo. Por mientras, te dejo el el link de mi página de LinkedIn.
+      estará operativo. Por mientras, te dejo el link de mi perfil de LinkedIn.
     </p>
   <section/>
   <section>
