--- a/index.html
+++ b/index.html
@@ -1,75 +1,54 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Javier Badillo San Juan</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #f4f4f4;
-      color: #333;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 40px 20px;
-    }
-    header {
-      text-align: center;
-      margin-bottom: 30px;
-    }
-    h1 {
-      font-size: 2.5em;
-      margin: 0;
-    }
-    h2 {
-      font-size: 1.5em;
-      margin: 10px 0;
-      color: #555;
-    }
-    section {
-      max-width: 700px;
-      text-align: center;
-      line-height: 1.6;
-      font-size: 1.1em;
-      background: white;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.05);
-    }
-    a {
-      color: #0072b1;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    footer {
-      margin-top: 40px;
-      font-size: 0.9em;
-      color: #888;
-    }
-  </style>
+  <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
   <header>
     <h1>Javier Badillo San Juan</h1>
-    <h2>Ingeniero Civil Mecánico</h2>
+    <p>Ingeniero Civil Mecánico</p>
   </header>
-  <section>
-    <p>
-      ¡Hola! En este blog muestro información relativa a mi experiencia profesional, proyectos en los que he trabajado 
-      e información interesante digna de compartir. Por el momento este sitio se encuentra en construcción, pero pronto 
-      estará operativo. Por mientras, te dejo el link de mi perfil de LinkedIn.
-    </p>
-  <section/>
-  <section>
-    <p><a href="https://www.linkedin.com/in/javierbadillosanjuan/" target="_blank">Ver perfil de LinkedIn</a></p>
-  </section>
+
+  <main>
+    <section class="presentacion">
+      <h2>Sobre mí</h2>
+      <p>Ingeniero Civil Mecánico de la Universidad Técnica Federico Santa María. 
+        Tengo especial interés en las áreas de diseño, manufactura, maquinaria industrial, procesos productivos y mecánica computacional. 
+        Me caracterizo por ser ordenado, analítico y metódico. 
+        Destaco por estar comprometido con identificar oportunidades de mejora e implementarlas en todo proceso con potencial para contribuir en el camino a la excelencia operacional. 
+        
+        Actualmente me encuentro en búsqueda de una oportunidad laboral que me permita abordar desafíos ingenieriles interesantes y que me permitan
+        crecer profesionalmente.
+        </p>
+    </section>
+
+    <section class="experiencia">
+      <h2>Proyectos destacados</h2>
+      <article>
+        <h3>Mejora de sensor inalámbrico de tensión de pernos con tecnología de galgas extensiométricas</h3>
+        <p>Propuse, desarrollé y lideré un proyecto de mejora de sensor IoT abarcando el aspecto mecánico de este durante mi trabajo como Analista de Monitoreo IoT en ME Elecmetal. Para aquello, estudié los fundamentos del funcionamiento de galgas extensiométricas y su aplicación en conjunto con puentes de Wheatstone para medir deformaciones en elementos mecánicos. El proyecto evaluó el rediseño geométrico del sensor, la posición y configuración electrónica del puente para disminuir la incertidumbre en la medición. El comportamiento del sensor se aproximó realizando simulaciones estructurales no lineales con Ansys y evaluando distintos escenarios de carga para obtener el espectro de todas las posibles mediciones. El proceso iterativo de diseño convergió en la selección, fabricación y ensayo de un prototipo que logró evidenciar un aumento significativo en la precisión de la medición.
+        </p>
+      </article>
+      <article>
+        <h3>Determinación numérica y experimental de módulo de elasticidad en materiales porosos basados en superficies mínimas triplemente periódicas</h3>
+        <p>Proyecto de título llevado a cabo en conjunto con el grupo de investigación multidisciplinario B3Mat (Facultad de Ingeniería y Ciencias de la Universidad Adolfo Ibáñez) enfocado en análisis de estructuras usadas en bioingeniería.
+            El objetivo de este trabajo fue predecir el módulo de elasticidad normalizado de distintas estructuras tridimensionales con características únicas para evaluar así su posible uso en aplicaciones biongenieriles como el uso de estos como scaffolds de hueso. Esta parte del proyecto se llevó a cabo mediante simulaciones estruturales con Ansys y se logró determinar el comportamiento de cuatro estructuras seleccionadas bajo un amplio rango de porosidades. La segunda parte del proyecto consistió en ensayar muestras de estas estructuras obtenidas mediante manufactura aditiva para establecer si lo pronosticado por el método numérico se cumple satisfactoriamente. Se analizaron los datos experimentales mediante distintas pruebas estadísticas y se determinó que se cumple el comportamiento entregado por el método numérico y que además existen 
+            diferencias significativas de la variable estudiada para las distintas estructuras escogidas para este estudio.
+        </p>
+      </article>
+    </section>
+
+    <section class="contacto">
+      <h2>Contacto</h2>
+      <p><a href="https://www.linkedin.com/in/javierbadillosanjuan/" target="_blank">LinkedIn</a></p>
+    </section>
+  </main>
 
   <footer>
-    Chile · Sitio en construcción
+    <p>&copy; 2025 Javier Badillo San Juan - Sitio en construcción</p>
   </footer>
 </body>
 </html>
