--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Javier Badillo San Juan - Sitio en construcción</p>
+    <p>&copy; 2025 Javier Badillo San Juan - Sitio en construcción - TEST REFRESH 1</p>
   </footer>
 </body>
 </html>
