--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
         <h3>Mejora de sensor inalámbrico de tensión de pernos con tecnología de galgas extensiométricas</h3>
         <p>Propuse, desarrollé y lideré un proyecto de mejora de sensor IoT abarcando el aspecto mecánico de este durante mi trabajo como Analista de Monitoreo IoT en ME Elecmetal. Para aquello, estudié los fundamentos del funcionamiento de galgas extensiométricas y su aplicación en conjunto con puentes de Wheatstone para medir deformaciones en elementos mecánicos. El proyecto evaluó el rediseño geométrico del sensor, la posición de galgas y configuración electrónica del puente para disminuir la incertidumbre en la medición. El comportamiento del sensor se aproximó realizando simulaciones estructurales no lineales con Ansys y evaluando distintos escenarios de carga para obtener el espectro de todas las posibles mediciones. El proceso iterativo de diseño convergió en la selección, fabricación y ensayo de un prototipo que logró evidenciar un aumento significativo en la precisión de la medición.
         </p>
+
+        <div class="galeria-proyecto">
+          <img src="img/parametros.png" alt="Parámetros geométricos">
+          <img src="img/simu.gif" alt="Esfuerzo de Von Mises">
+        </div>
+
       </article>
       <article>
         <h3>Determinación numérica y experimental de módulo de elasticidad en materiales porosos basados en superficies mínimas triplemente periódicas</h3>
@@ -71,6 +77,11 @@
             El objetivo de este trabajo fue predecir el módulo de elasticidad normalizado de distintas estructuras tridimensionales con características únicas para evaluar así su posible uso en aplicaciones biongenieriles como el uso de estos como scaffolds de hueso. Esta parte del proyecto se llevó a cabo mediante simulaciones estruturales con Ansys y se logró determinar el comportamiento de cuatro estructuras seleccionadas bajo un amplio rango de porosidades. La segunda parte del proyecto consistió en ensayar muestras de estas estructuras obtenidas mediante manufactura aditiva para establecer si lo pronosticado por el método numérico se cumple satisfactoriamente. Se analizaron los datos experimentales mediante distintas pruebas estadísticas y se determinó que se cumple el comportamiento entregado por el método numérico y que además existen 
             diferencias significativas de la variable estudiada para las distintas estructuras escogidas para este estudio.
         </p>
+
+        <div class="galeria-proyecto">
+          <img src="img/gyroidlupa.png" alt="Impresión 3D bajo lupa">
+          <img src="img/gyroidsolid.gif" alt="Compresión de material poroso">
+        </div>
       </article>
     </section>
 
@@ -81,7 +92,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Javier Badillo San Juan - Sitio en construcción - TEST REFRESH 1</p>
+    <p>&copy; 2025 Javier Badillo San Juan - Sitio en construcción</p>
   </footer>
 </body>
 </html>
