--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Javier Badillo San Juan</title>
   <link rel="stylesheet" href="estilos.css">
+  <link rel="icon" href="favicon.png" type="image/png">
+
 </head>
 <body>
   <header>
@@ -18,10 +20,8 @@
       <p>Ingeniero Civil Mecánico de la Universidad Técnica Federico Santa María. 
         Tengo especial interés en las áreas de diseño, manufactura, maquinaria industrial, procesos productivos y mecánica computacional. 
         Me caracterizo por ser ordenado, analítico y metódico. 
-        Destaco por estar comprometido con identificar oportunidades de mejora e implementarlas en todo proceso con potencial para contribuir en el camino a la excelencia operacional. 
-        
-        Actualmente me encuentro en búsqueda de una oportunidad laboral que me permita abordar desafíos ingenieriles interesantes y que me permitan
-        crecer profesionalmente.
+        Destaco por estar comprometido con identificar oportunidades de mejora e implementarlas en todo proceso con potencial para contribuir en el camino a la excelencia operacional. Impulsado y apasionado por el desarrollo de soluciones técnicas a problemas ingenieriles complejos mediante un enfoque analítico y metódico.
+      
         </p>
     </section>
 
