--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p>Ingeniero Civil Mecánico de la Universidad Técnica Federico Santa María. 
         Tengo especial interés en las áreas de diseño, manufactura, maquinaria industrial, procesos productivos y mecánica computacional. 
         Me caracterizo por ser ordenado, analítico y metódico. 
-        Destaco por estar comprometido con identificar oportunidades de mejora e implementarlas en todo proceso con potencial para contribuir en el camino a la excelencia operacional. Impulsado y apasionado por el desarrollo de soluciones técnicas a problemas ingenieriles complejos mediante un enfoque analítico y metódico.
+        Destaco por estar comprometido con identificar oportunidades de mejora e implementarlas en todo proceso con potencial para contribuir en el camino a la excelencia operacional. Impulsado y apasionado por el desarrollo de soluciones técnicas a problemas ingenieriles desafiantes mediante un enfoque analítico y metódico.
       
         </p>
     </section>
