--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
       <h2>Sobre mí</h2>
       <p>Ingeniero Civil Mecánico de la Universidad Técnica Federico Santa María. 
         Tengo especial interés en las áreas de diseño, manufactura, maquinaria industrial, procesos productivos y mecánica computacional. 
-        Me caracterizo por ser ordenado, analítico y metódico. 
-        Destaco por estar comprometido con identificar oportunidades de mejora e implementarlas en todo proceso con potencial para contribuir en el camino a la excelencia operacional. Impulsado y apasionado por el desarrollo de soluciones técnicas a problemas ingenieriles desafiantes mediante un enfoque analítico y metódico.
+        Me caracterizo por ser ordenado, analítico y metódico. Destaco por estar comprometido con identificar oportunidades de mejora e implementarlas en todo proceso con potencial para contribuir en el camino a la excelencia operacional. Impulsado y apasionado por el desarrollo de soluciones técnicas a problemas ingenieriles desafiantes mediante un enfoque analítico y metódico.
       
         </p>
     </section>
