--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <section class="presentacion">
       <h2>Sobre mí</h2>
       <p>Ingeniero Civil Mecánico de la Universidad Técnica Federico Santa María. 
-        Tengo especial interés en las áreas de diseño, manufactura, maquinaria industrial, procesos productivos y mecánica computacional. 
-        Me caracterizo por ser ordenado, analítico y metódico. Destaco por estar comprometido con identificar oportunidades de mejora e implementarlas en todo proceso con potencial para contribuir en el camino a la excelencia operacional. Impulsado y apasionado por el desarrollo de soluciones técnicas a problemas ingenieriles desafiantes mediante un enfoque analítico y metódico.
+        Tengo especial interés en las áreas de diseño, manufactura, maquinaria industrial, procesos productivos y mecánica computacional. Destaco por estar comprometido con identificar oportunidades de mejora e implementarlas en todo proceso con potencial para contribuir en el camino a la excelencia operacional. Impulsado y apasionado por el desarrollo de soluciones técnicas a problemas ingenieriles desafiantes mediante un enfoque analítico y metódico.
       
         </p>
     </section>
@@ -72,9 +71,7 @@
       </article>
       <article>
         <h3>Determinación numérica y experimental de módulo de elasticidad en materiales porosos basados en superficies mínimas triplemente periódicas</h3>
-        <p>Proyecto de título llevado a cabo en conjunto con el grupo de investigación multidisciplinario B3Mat (Facultad de Ingeniería y Ciencias de la Universidad Adolfo Ibáñez) enfocado en análisis de estructuras usadas en bioingeniería.
-            El objetivo de este trabajo fue predecir el módulo de elasticidad normalizado de distintas estructuras tridimensionales con características únicas para evaluar así su posible uso en aplicaciones biongenieriles como el uso de estos como scaffolds de hueso. Esta parte del proyecto se llevó a cabo mediante simulaciones estruturales con Ansys y se logró determinar el comportamiento de cuatro estructuras seleccionadas bajo un amplio rango de porosidades. La segunda parte del proyecto consistió en ensayar muestras de estas estructuras obtenidas mediante manufactura aditiva para establecer si lo pronosticado por el método numérico se cumple satisfactoriamente. Se analizaron los datos experimentales mediante distintas pruebas estadísticas y se determinó que se cumple el comportamiento entregado por el método numérico y que además existen 
-            diferencias significativas de la variable estudiada para las distintas estructuras escogidas para este estudio.
+        <p>Proyecto de título llevado a cabo en conjunto con el grupo de investigación multidisciplinario <a href="https://www.b3matchile.com/about-4" target="_blank">B3Mat</a> (Facultad de Ingeniería y Ciencias de la Universidad Adolfo Ibáñez) enfocado en análisis de estructuras usadas en bioingeniería. El objetivo de este trabajo fue predecir el módulo de elasticidad normalizado de distintas estructuras tridimensionales con características únicas para evaluar así su posible uso en aplicaciones biongenieriles como el uso de estos como scaffolds de hueso. Esta parte del proyecto se llevó a cabo mediante simulaciones estruturales con Ansys y se logró determinar el comportamiento de cuatro estructuras seleccionadas bajo un amplio rango de porosidades. La segunda parte del proyecto consistió en ensayar muestras de estas estructuras obtenidas mediante manufactura aditiva para establecer si lo pronosticado por el método numérico se cumple satisfactoriamente. Se analizaron los datos experimentales mediante distintas pruebas estadísticas y se determinó que se cumple el comportamiento entregado por el método numérico y que además existen diferencias significativas de la variable estudiada para las distintas estructuras escogidas para este estudio.
         </p>
 
         <div class="galeria-proyecto">
