--- a/proyecto1/index.html
+++ b/proyecto1/index.html
@@ -17,12 +17,12 @@
   <main>
     <section>
       <h2>Proyecto 1</h2>
-      <p>Descripción breve de un proyecto profesional que hayas realizado. Incluye logros, herramientas utilizadas o el impacto generado.</p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci non natus maxime, saepe, optio quod reiciendis incidunt et ad dignissimos, in praesentium nobis sunt culpa eos pariatur cupiditate. Ullam, maxime..</p>
     </section>
 
     <section>
       <h2>Proyecto 2</h2>
-      <p>Otra experiencia relevante con resultados concretos. Puedes incluir enlaces, imágenes o documentos si lo deseas.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores ea ullam veniam eos ipsam, quos, nobis quidem aliquid vero dolore dolor eligendi deleniti saepe ut consequatur amet molestias quo alias!</p>
     </section>
   </main>
 
