--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <h1>Javier Badillo San Juan</h1>
-    <p>Ingeniero Civil Mecánico</p>
+    <p class="descripcion-profesion">Ingeniero Civil Mecánico</p>
   </header>
 
   <main>
@@ -81,14 +81,17 @@
       </article>
     </section>
 
-    <section class="contacto">
-      <h2>Contacto</h2>
-      <p><a href="https://www.linkedin.com/in/javierbadillosanjuan/" target="_blank">LinkedIn</a></p>
-    </section>
+    
   </main>
 
   <footer>
-    <p>&copy; 2025 Javier Badillo San Juan - Sitio en construcción</p>
+    <p>&copy; 2025 Diseño y desarrollo por  Javier Badillo San Juan</p>
+    <a class="boton-linkedin" href="https://www.linkedin.com/in/javierbadillosanjuan/" target="_blank">
+      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16" style="vertical-align: middle; margin-right: 8px;">
+        <path d="M0 1.146C0 .513.324 0 .725 0h14.55c.401 0 .725.513.725 1.146v13.708c0 .633-.324 1.146-.725 1.146H.724A.723.723 0 0 1 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.21c.837 0 1.358-.554 1.358-1.248-.015-.709-.521-1.248-1.341-1.248-.82 0-1.358.54-1.358 1.248 0 .694.52 1.248 1.326 1.248h.015zm4.91 8.21V9.359c0-.214.015-.428.08-.582.175-.428.574-.872 1.243-.872.877 0 1.228.658 1.228 1.623v3.866h2.401v-4.14c0-2.215-1.181-3.245-2.756-3.245-1.28 0-1.845.711-2.165 1.21v.026h-.015a5.3 5.3 0 0 1 .015-.026V6.169H6.542c.03.69 0 7.225 0 7.225h2.401z"/>
+      </svg>
+      Ver perfil en LinkedIn
+    </a>
   </footer>
 </body>
 </html>
