--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       
       <article class="experiencia-item">
         <p class="detalle-cargo">
-          <strong>Analista de Monitoreo IoT</strong> | ME Elecmetal · <span class="fecha">05/2024 – 04/2025</span>
+          <strong>Analista de Monitoreo IoT</strong> | ME Elecmetal
         </p>
         <p>
           Configuración, calibración e implementación de sensores inalámbricos de monitoreo de tensión de pernos con tecnología de galgas extensiométricas en equipos mineros. Propuesta y desarrollo de proyecto de mejora de sensor mediante simulaciones estructurales. Análisis de datos recolectados de manera remota y reportabilidad periódica a cliente. Supervisar y auditar en terreno procedimiento de instalación de elementos de sujeción en molinos de bolas y SAG de faenas mineras.
@@ -97,7 +97,7 @@
       
       <article class="experiencia-item">
         <p class="detalle-cargo">
-          <strong>Practicante</strong> | Grünenthal · <span class="fecha">07/2023 – 08/2023</span>
+          <strong>Practicante</strong> | Grünenthal
         </p>
         <p>
           Soporte en plan de implementación del pilar de Mantenimiento Autónomo de la metodología TPM (Mantenimiento Productivo Total) en dos líneas piloto del Departamento de Producción.
@@ -106,7 +106,7 @@
 
       <article class="experiencia-item">
         <p class="detalle-cargo">
-          <strong>Practicante</strong> | ASMAR · <span class="fecha">06/2022 – 07/2022</span>
+          <strong>Practicante</strong> | ASMAR
         </p>
         <p>
           Ayudante de operadores de torno y fresadora. Asistencia en cálculo y configuración de parámetros de mecanizado, montaje y alineación de piezas, montaje de herramientas de corte y control dimensional.
