--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
         <figure>
           <img class="imagen-pequena" src="experiencia/img/mandrinado.jpg">
-          <figcaption>Operación de mandrinado sobre cuerpo de hélice de embarcación de la Armada.</figcaption>
+          <figcaption>Operación de mandrinado sobre cuerpo de hélice de buque.</figcaption>
         </figure>
 
         <figure>
@@ -148,7 +148,7 @@
 
         <figure>
           <img class="imagen-pequena" src="experiencia/img/ensayo_tintas.jpg">
-          <figcaption>Ensayo de tintas penetrantes sobre eje de acero inoxidable para bomba de incendios de buque Almirante Montt.</figcaption>
+          <figcaption>Ensayo de tintas penetrantes sobre eje de acero inoxidable para bomba de incendios de buque.</figcaption>
         </figure>
 
       </article>
