--- a/index.html
+++ b/index.html
@@ -92,6 +92,27 @@
         <p>
           Configuración, calibración e implementación de sensores inalámbricos de monitoreo de tensión de pernos con tecnología de galgas extensiométricas en equipos mineros. Propuesta y desarrollo de proyecto de mejora de sensor mediante simulaciones estructurales. Análisis de datos recolectados de manera remota y reportabilidad periódica a cliente. Supervisar y auditar en terreno procedimiento de instalación de elementos de sujeción en molinos de bolas y SAG de faenas mineras.
         </p>
+
+        <figure>
+          <img class="imagen-pequena" src="experiencia/img/lacoipa.jpg">
+          <figcaption>Molino SAG, mina La Coipa.</figcaption>
+        </figure>
+
+        <figure>
+          <img class="imagen-pequena" src="experiencia/img/mantoverde.jpg">
+          <figcaption>Calibración de llaves de torque. Mina Mantoverde.</figcaption>
+        </figure>
+
+        <figure>
+          <img class="imagen-pequena" src="experiencia/img/teniente.jpg">
+          <figcaption>Molino de bolas, División el Teniente.</figcaption>
+        </figure>
+
+        <figure>
+          <img class="imagen-pequena" src="experiencia/img/experimentacion.jpg">
+          <figcaption>Ensayo de prototipo de rediseño de sensor.</figcaption>
+        </figure>
+
       </article>
       
       <article class="experiencia-item">
