--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
         <figure>
           <img class="imagen-pequena" src="experiencia/img/experimentacion.jpg">
-          <figcaption>Ensayo de prototipo de rediseño de sensor.</figcaption>
+          <figcaption>Ensayo de prototipo sensor de tensión de pernos.</figcaption>
         </figure>
 
       </article>
